# sire

./: .clang-format  .clocconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  Traditional_CMakeLists.txt  cpp.hint
config/: aris_sim-config.cmake.in  sire-config.cmake.in  sire.xml
demo/: CMakeLists.txt
demo/demo_duan_cam_backend/: CMakeLists.txt
demo/demo_duan_cam_backend/config/: sire_template.xml
demo/demo_middle_ware_collision/config/: sire.xml  sire_template.xml
demo/demo_middleware_collision/: CMakeLists.txt  main.cpp
demo/demo_middleware_collision/config/: sire_template.xml
demo/demo_model_init/: CMakeLists.txt  main.cpp
demo/demo_model_init/config/: kuka.xml
demo/demo_server/: main.cpp
demo/demo_server/config/: sire.xml
demo/demo_server_controller_sensor/: CMakeLists.txt  main.cpp
demo/demo_server_controller_sensor/config/: sire.xml  sire_template.xml
demo/demo_server_integrator_dynamics/: CMakeLists.txt
demo/demo_server_integrator_dynamics/config/: sire_template.xml
demo/demo_server_sensor_root/: CMakeLists.txt
demo/demo_server_sensor_root/config/: sire_template.xml
demo/demo_simulation/: CMakeLists.txt
demo/demo_simulation/arm_fall/: CMakeLists.txt  main.cpp
demo/demo_simulation/arm_fall/config/: sire_template.xml
demo/demo_simulation/free_fall/: CMakeLists.txt  main.cpp
demo/demo_simulation/free_fall/config/: sire_14_one_ball_fall.xml  sire_8_one_ball_fall.xml  sire_8_three_ball_fall.xml  sire_kd_contact.xml  sire_template.xml
demo/demo_simulation/three_part/: CMakeLists.txt  main.cpp  simulation_with_action.cpp  simulation_with_action.hpp  test_events.cpp  test_events.hpp
demo/demo_simulation/three_part/config/: sire_problem.xml  sire_template.xml
demo/demo_simulation/three_part/python/: main.py  send_command.py
demo/demo_simulation/two_part_fall/: CMakeLists.txt
demo/demo_simulation/two_part_fall/config/: sire_template.xml
include/: aris_sim.hpp  sire.hpp
include/aris_sim/collision/: collision.hpp
include/aris_sim/simulator/: dynamic_simulator.hpp
include/collision/: collision.hpp
include/simulator/: dynamic_simulator.hpp
include/sire/cam_backend/: cam_backend.hpp  command.hpp
include/sire/collision/: collided_objects_callback.hpp  collision.hpp  collision_calculator.hpp  collision_engine.hpp  collision_exists_callback.hpp  collision_filter.hpp  collision_module.hpp
include/sire/controller/: controller.hpp  controller_sensor.hpp
include/sire/core/: base_factory.hpp  constants.hpp  contact_pair_manager.hpp  event_base.hpp  event_manager.hpp  force_screw.hpp  handler_base.hpp  is_less_than_comparable.hpp  material_manager.hpp  material_pair_prop.hpp  module_base.hpp  prop_map.hpp  property_map.hpp  sire_assert.hpp  sire_assertion_error.hpp  sire_decl_def_macro.hpp  sire_deprecated.hpp  sire_log.hpp  sire_throw.hpp  sorted_pair.hpp  string_utils.hpp  timer.hpp  trigger_base.hpp
include/sire/geometry/: collision_geometry.hpp  geometry.hpp
include/sire/integrator/: explicit_euler_integrator.hpp  integrator_base.hpp  runge_kutta4_integrator.hpp  semi_implicit_euler_integrator.hpp
include/sire/middleware/: program_middleware.hpp  sire_middleware.hpp  sire_program_middleware.hpp
include/sire/modules/: collision_module.hpp  module_base.hpp  modules.hpp
include/sire/physics/: physics.hpp  physics_engine.hpp  utils.hpp
include/sire/plan/: command.hpp  display3d_init_cmd.hpp  execute_real_time_test_cmd.hpp  fce_control_test_cmd.hpp  get_cmd.hpp  get_force_sensor_data_cmd.hpp  get_geometry_cmd.hpp  mvj_cmd.hpp  sire_get.hpp  sire_get_debug.hpp
include/sire/sensor/: sensor.hpp
include/sire/server/: api.hpp  command.hpp  interface.hpp  middle_ware.hpp  server.hpp
include/sire/simulator/: dynamic_simulator.hpp  event_manager.hpp  event_manager_base.hpp  events.hpp  force.hpp  integrator.hpp  recorder.hpp  simple_event_manager.hpp  simulator.hpp  simulator_base.hpp  simulator_modules.hpp
include/sire/transfer/: part_pq_transfer.hpp  transfer.hpp  (+4 more)
src/cam_backend/: cam_backend.cpp  command.cpp
src/collision/: collided_objects_callback.cpp  collision.cpp  collision_calculator.cpp  collision_engine.cpp  collision_exists_callback.cpp  collision_filter.cpp  collision_module.cpp
src/controller/: controller_sensor.cpp
src/core/: base_factory.cpp  contact_pair_manager.cpp  event_base.cpp  event_manager.cpp  force_screw.cpp  handler_base.cpp  material_manager.cpp  material_pair_prop.cpp  module_base.cpp  prop_map.cpp  sire_assert_and_throw.cpp  sorted_pair.cpp  timer.cpp  trigger_base.cpp
src/ext/: tinyxml2.cpp
src/geometry/: collision_geometry.cpp
src/integrator/: explicit_euler_integrator.cpp  integrator.cpp  integrator_base.cpp  runge_kutta4_integrator.cpp  semi_implicit_euler_integrator.cpp
src/middleware/: program_middleware.cpp  sire_middleware.cpp  sire_program_middleware.cpp
src/modules/: collision_module.cpp  module_base.cpp
src/physics/: physics_engine.cpp  utils.cpp
src/plan/: command.cpp  display3d_init_cmd.cpp  execute_real_time_test_cmd.cpp  fce_control_test_cmd.cpp  get_cmd.cpp  get_force_sensor_data_cmd.cpp  get_geometry_cmd.cpp  mvj_cmd.cpp  sire_get.cpp  sire_get_debug.cpp
src/sensor/: sensor.cpp
src/server/: api.cpp  command.cpp  interface.cpp  middle_ware.cpp
src/simulator/: dynamic_simulator.cpp  event_manager.cpp  events.cpp  force.cpp  integrator.cpp  simple_event_manager.cpp  simulator.cpp  simulator_base.cpp  simulator_modules.cpp
src/transfer/: force_control_simulation_transfer.cpp  part_pq_transfer.cpp  simulation_transfer.cpp  sire_transfer.cpp  virtual_force_sensor_transfer.cpp
tests/: CMakeLists.txt
tests/cam_backend/: cam_backend_test.cpp  collision_test.cpp
tests/cam_backend/config/: cam_model.xml  physics_engine.xml
tests/core/: base_factory_test.cpp  material_manager_test.cpp  material_pair_prop_test.cpp  prop_map_test.cpp  sorted_pair_test.cpp  string_utils_test.cpp
tests/model/: model_data_copy_test.cpp  screw_test.cpp
tests/physics/collision/: physics_engine_test.cpp
tests/physics/geometry/: geometry_serialization_test.cpp
(+83 files in other folders)
